--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   liquid_swipe: ^3.0.0
   smooth_page_indicator: ^1.0.0+2
   get: ^4.6.5
+  flutter_otp_text_field: ^1.1.1
 
 dev_dependencies:
   flutter_test:
