--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   get: ^4.6.5
   flutter_otp_text_field: ^1.1.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
