--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   firebase_core: ^2.11.0
   firebase_auth: ^4.5.0
   intl: ^0.17.0
+  cloud_firestore: ^4.6.0
+  firebase_database: ^10.1.2
 
 
 dev_dependencies:
