--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  charts_flutter: ^0.12.0
+  pie_chart: ^5.3.2
   table_calendar: ^3.0.0
   google_fonts: ^4.0.3
   liquid_swipe: ^3.0.0
